TP_INTEGRADOR/obj/integrador.output
Nonterminals useless in grammar

   decla_


Terminals unused in grammar

   STRUCT_O_UNION


Rules useless in grammar

  148 decla_: /* empty */
  149       | decla


Rules useless in parser due to conflicts

  133 IDENTIFICADOR_: IDENTIFICADOR


State 4 conflicts: 1 reduce/reduce
State 15 conflicts: 5 shift/reduce
State 16 conflicts: 5 shift/reduce
State 27 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 45 conflicts: 2 shift/reduce
State 49 conflicts: 2 reduce/reduce
State 50 conflicts: 5 shift/reduce
State 66 conflicts: 1 shift/reduce
State 72 conflicts: 1 reduce/reduce
State 88 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 161 conflicts: 1 shift/reduce
State 192 conflicts: 1 shift/reduce
State 226 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: declaracion '\n'
    4     | sentencia '\n'
    5     | error '\n'

    6 expresion: expresionAsignacion
    7          | expresion ',' expresionAsignacion

    8 expresionAsignacion: expresionCondicional
    9                    | expresionUnaria OPERADOR_ASIGNACION expresionAsignacion

   10 expresionCondicional: expresionOLogico
   11                     | expresionOLogico '?' expresion ':' expresionCondicional

   12 expresionOLogico: expresionYLogico
   13                 | expresionOLogico OPERADOR_O_LOGICO expresionYLogico

   14 expresionYLogico: expresionOInclusivo
   15                 | expresionYLogico OPERADOR_Y_LOGICO expresionOInclusivo

   16 expresionOInclusivo: expresionOExcluyente
   17                    | expresionOInclusivo OPERADOR_O_INCLUSIVO expresionOExcluyente

   18 expresionOExcluyente: expresionY
   19                     | expresionOExcluyente OPERADOR_O_EXCLUSIVO expresionY

   20 expresionY: expresionIgualdad
   21           | expresionY OPERADOR_Y expresionIgualdad

   22 expresionIgualdad: expresionRelacional
   23                  | expresionIgualdad OPERADOR_IGUALDAD expresionRelacional

   24 expresionRelacional: expresionCorrimiento
   25                    | expresionRelacional OPERADOR_RELACIONAL expresionCorrimiento

   26 expresionCorrimiento: expresionAditiva
   27                     | expresionCorrimiento OPERADOR_CORRIMIENTO expresionAditiva

   28 expresionAditiva: expresionMultiplicativa
   29                 | expresionAditiva OPERADOR_ADITIVO expresionMultiplicativa

   30 expresionMultiplicativa: expresionConversion
   31                        | expresionMultiplicativa OPERADOR_MULTIPLICATIVO expresionConversion

   32 expresionConversion: expresionUnaria
   33                    | '(' nombreTipo ')' expresionConversion

   34 expresionUnaria: expresionSufijo
   35                | OPERADOR_INCREMENTO expresionUnaria
   36                | OPERADOR_UNARIO expresionConversion
   37                | OPERADOR_SIZEOF expresionUnaria
   38                | OPERADOR_SIZEOF '(' nombreTipo ')'

   39 expresionSufijo: expresionPrimaria
   40                | expresionSufijo '[' expresion ']'
   41                | expresionSufijo '(' listaArgumentos_ ')'
   42                | expresionSufijo OPERADOR_SELECCION_MIEMBRO IDENTIFICADOR
   43                | expresionSufijo OPERADOR_INCREMENTO

   44 listaArgumentos: expresionAsignacion
   45                | listaArgumentos ',' expresionAsignacion

   46 expresionPrimaria: IDENTIFICADOR
   47                  | constante
   48                  | CONSTANTE_CADENA
   49                  | '(' expresion ')'

   50 expresionConstante: expresionCondicional

   51 constante: CONSTANTE_DECIMAL
   52          | CONSTANTE_OCTAL
   53          | CONSTANTE_HEXADECIMAL
   54          | CONSTANTE_REAL
   55          | CONSTANTE_CARACTER

   56 declaracion: especificadoresDeclaracion listaDeclaradores_

   57 especificadoresDeclaracion: ESPECIFICADOR_CLASE_ALMACENAMIENTO especificadoresDeclaracion_
   58                           | especificadorTipo especificadoresDeclaracion_
   59                           | CALIFICADOR_TIPO especificadoresDeclaracion_

   60 listaDeclaradores: declarador
   61                  | listaDeclaradores ',' declarador

   62 declarador: decla
   63           | decla '=' inicializador

   64 inicializador: expresionAsignacion
   65              | '{' listaInicializadores '}'
   66              | '{' listaInicializadores ',' '}'

   67 listaInicializadores: inicializador
   68                     | listaInicializadores ',' inicializador

   69 especificadorTipo: TIPO_DATO
   70                  | especificadorEnum
   71                  | nombreTypedef

   72 decla: puntero_ declaradorDirecto

   73 puntero: '*'
   74        | '*' puntero

   75 declaradorDirecto: IDENTIFICADOR
   76                  | '(' decla ')'
   77                  | declaradorDirecto '[' expresionConstante_ ']'
   78                  | declaradorDirecto '(' listaTiposParametros ')'

   79 listaTiposParametros: listaParametros
   80                     | listaParametros ',' ELLIPSIS

   81 listaParametros: declaracionParametro
   82                | listaParametros ',' declaracionParametro

   83 declaracionParametro: especificadoresDeclaracion decla
   84                     | especificadoresDeclaracion declaradorAbstracto_

   85 especificadorEnum: ENUM IDENTIFICADOR_ '{' listaEnumeradores '}'
   86                  | ENUM IDENTIFICADOR

   87 listaEnumeradores: enumerador
   88                  | listaEnumeradores ',' enumerador

   89 enumerador: constanteEnumeracion
   90           | constanteEnumeracion '=' expresionConstante

   91 constanteEnumeracion: IDENTIFICADOR

   92 nombreTypedef: IDENTIFICADOR

   93 nombreTipo: declaradorAbstracto_

   94 declaradorAbstracto: puntero
   95                    | puntero_ declaradorAbstractoDirecto

   96 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   97                           | declaradorAbstractoDirecto_ '[' expresionConstante_ ']'
   98                           | declaradorAbstractoDirecto_ '(' listaTiposParametros_ ')'

   99 sentencia: sentenciaExpresion
  100          | sentenciaCompuesta
  101          | sentenciaSeleccion
  102          | sentenciaIteracion
  103          | sentenciaSalto

  104 sentenciaExpresion: expresion_ ';'

  105 expresion_: /* empty */
  106           | expresion

  107 sentenciaCompuesta: '{' listaDeclaraciones_ listaSentencias_ '}'

  108 listaDeclaraciones: declaracion
  109                   | listaDeclaraciones declaracion

  110 listaSentencias: sentencia
  111                | listaSentencias sentencia

  112 sentenciaSeleccion: IF '(' expresion ')' sentencia
  113                   | IF '(' expresion ')' sentencia ELSE sentencia
  114                   | SWITCH '(' expresion ')' sentencia
  115                   | SWITCH '(' expresion ')' sentenciaEtiquetada

  116 sentenciaEtiquetada: CASE expresionConstante ':' sentencia
  117                    | DEFAULT ':' sentencia
  118                    | IDENTIFICADOR ':' sentencia

  119 sentenciaIteracion: WHILE '(' expresion ')' sentencia
  120                   | DO sentencia WHILE '(' expresion ')' ';'
  121                   | FOR '(' expresion_ ';' expresion_ ';' expresion_ ')' sentencia

  122 sentenciaSalto: CONTINUE ';'
  123               | BREAK ';'
  124               | RETURN expresion_ ';'
  125               | GOTO IDENTIFICADOR ';'

  126 listaArgumentos_: /* empty */
  127                 | listaArgumentos

  128 listaDeclaradores_: /* empty */
  129                   | listaDeclaradores

  130 especificadoresDeclaracion_: /* empty */
  131                            | especificadoresDeclaracion

  132 IDENTIFICADOR_: /* empty */
  133               | IDENTIFICADOR

  134 puntero_: /* empty */
  135         | puntero

  136 expresionConstante_: /* empty */
  137                    | expresionConstante

  138 declaradorAbstracto_: /* empty */
  139                     | declaradorAbstracto

  140 listaTiposParametros_: /* empty */
  141                      | listaTiposParametros

  142 declaradorAbstractoDirecto_: /* empty */
  143                            | declaradorAbstractoDirecto

  144 listaDeclaraciones_: /* empty */
  145                    | listaDeclaraciones

  146 listaSentencias_: /* empty */
  147                 | listaSentencias


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5
'(' (40) 33 38 41 49 76 78 96 98 112 113 114 115 119 120 121
')' (41) 33 38 41 49 76 78 96 98 112 113 114 115 119 120 121
'*' (42) 73 74
',' (44) 7 45 61 66 68 80 82 88
':' (58) 11 116 117 118
';' (59) 104 120 121 122 123 124 125
'=' (61) 63 90
'?' (63) 11
'[' (91) 40 77 97
']' (93) 40 77 97
'{' (123) 65 66 85 107
'}' (125) 65 66 85 107
error (256) 5
IDENTIFICADOR (258) 42 46 75 86 91 92 118 125 133
OPERADOR_ASIGNACION (259) 9
OPERADOR_O_LOGICO (260) 13
OPERADOR_Y_LOGICO (261) 15
OPERADOR_O_INCLUSIVO (262) 17
OPERADOR_O_EXCLUSIVO (263) 19
OPERADOR_Y (264) 21
OPERADOR_IGUALDAD (265) 23
OPERADOR_RELACIONAL (266) 25
OPERADOR_CORRIMIENTO (267) 27
OPERADOR_ADITIVO (268) 29
OPERADOR_MULTIPLICATIVO (269) 31
OPERADOR_INCREMENTO (270) 35 43
OPERADOR_UNARIO (271) 36
OPERADOR_SIZEOF (272) 37 38
OPERADOR_SELECCION_MIEMBRO (273) 42
CONSTANTE_CADENA (274) 48
CONSTANTE_DECIMAL (275) 51
CONSTANTE_OCTAL (276) 52
CONSTANTE_HEXADECIMAL (277) 53
CONSTANTE_REAL (278) 54
CONSTANTE_CARACTER (279) 55
TIPO_DATO (280) 69
ESPECIFICADOR_CLASE_ALMACENAMIENTO (281) 57
CALIFICADOR_TIPO (282) 59
STRUCT_O_UNION (283)
ELLIPSIS (284) 80
ENUM (285) 85 86
IF (286) 112 113
ELSE (287) 113
SWITCH (288) 114 115
WHILE (289) 119 120
DO (290) 120
FOR (291) 121
CASE (292) 116
DEFAULT (293) 117
CONTINUE (294) 122
BREAK (295) 123
RETURN (296) 124
GOTO (297) 125


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
input (57)
    on left: 1 2, on right: 0 2
line (58)
    on left: 3 4 5, on right: 2
expresion (59)
    on left: 6 7, on right: 7 11 40 49 106 112 113 114 115 119 120
expresionAsignacion (60)
    on left: 8 9, on right: 6 7 9 44 45 64
expresionCondicional (61)
    on left: 10 11, on right: 8 11 50
expresionOLogico (62)
    on left: 12 13, on right: 10 11 13
expresionYLogico (63)
    on left: 14 15, on right: 12 13 15
expresionOInclusivo (64)
    on left: 16 17, on right: 14 15 17
expresionOExcluyente (65)
    on left: 18 19, on right: 16 17 19
expresionY (66)
    on left: 20 21, on right: 18 19 21
expresionIgualdad (67)
    on left: 22 23, on right: 20 21 23
expresionRelacional (68)
    on left: 24 25, on right: 22 23 25
expresionCorrimiento (69)
    on left: 26 27, on right: 24 25 27
expresionAditiva (70)
    on left: 28 29, on right: 26 27 29
expresionMultiplicativa (71)
    on left: 30 31, on right: 28 29 31
expresionConversion (72)
    on left: 32 33, on right: 30 31 33 36
expresionUnaria (73)
    on left: 34 35 36 37 38, on right: 9 32 35 37
expresionSufijo (74)
    on left: 39 40 41 42 43, on right: 34 40 41 42 43
listaArgumentos (75)
    on left: 44 45, on right: 45 127
expresionPrimaria (76)
    on left: 46 47 48 49, on right: 39
expresionConstante (77)
    on left: 50, on right: 90 116 137
constante (78)
    on left: 51 52 53 54 55, on right: 47
declaracion (79)
    on left: 56, on right: 3 108 109
especificadoresDeclaracion (80)
    on left: 57 58 59, on right: 56 83 84 131
listaDeclaradores (81)
    on left: 60 61, on right: 61 129
declarador (82)
    on left: 62 63, on right: 60 61
inicializador (83)
    on left: 64 65 66, on right: 63 67 68
listaInicializadores (84)
    on left: 67 68, on right: 65 66 68
especificadorTipo (85)
    on left: 69 70 71, on right: 58
decla (86)
    on left: 72, on right: 62 63 76 83
puntero (87)
    on left: 73 74, on right: 74 94 135
declaradorDirecto (88)
    on left: 75 76 77 78, on right: 72 77 78
listaTiposParametros (89)
    on left: 79 80, on right: 78 141
listaParametros (90)
    on left: 81 82, on right: 79 80 82
declaracionParametro (91)
    on left: 83 84, on right: 81 82
especificadorEnum (92)
    on left: 85 86, on right: 70
listaEnumeradores (93)
    on left: 87 88, on right: 85 88
enumerador (94)
    on left: 89 90, on right: 87 88
constanteEnumeracion (95)
    on left: 91, on right: 89 90
nombreTypedef (96)
    on left: 92, on right: 71
nombreTipo (97)
    on left: 93, on right: 33 38
declaradorAbstracto (98)
    on left: 94 95, on right: 96 139
declaradorAbstractoDirecto (99)
    on left: 96 97 98, on right: 95 143
sentencia (100)
    on left: 99 100 101 102 103, on right: 4 110 111 112 113 114 116
    117 118 119 120 121
sentenciaExpresion (101)
    on left: 104, on right: 99
expresion_ (102)
    on left: 105 106, on right: 104 121 124
sentenciaCompuesta (103)
    on left: 107, on right: 100
listaDeclaraciones (104)
    on left: 108 109, on right: 109 145
listaSentencias (105)
    on left: 110 111, on right: 111 147
sentenciaSeleccion (106)
    on left: 112 113 114 115, on right: 101
sentenciaEtiquetada (107)
    on left: 116 117 118, on right: 115
sentenciaIteracion (108)
    on left: 119 120 121, on right: 102
sentenciaSalto (109)
    on left: 122 123 124 125, on right: 103
listaArgumentos_ (110)
    on left: 126 127, on right: 41
listaDeclaradores_ (111)
    on left: 128 129, on right: 56
especificadoresDeclaracion_ (112)
    on left: 130 131, on right: 57 58 59
IDENTIFICADOR_ (113)
    on left: 132 133, on right: 85
puntero_ (114)
    on left: 134 135, on right: 72 95
expresionConstante_ (115)
    on left: 136 137, on right: 77 97
declaradorAbstracto_ (116)
    on left: 138 139, on right: 84 93
listaTiposParametros_ (117)
    on left: 140 141, on right: 98
declaradorAbstractoDirecto_ (118)
    on left: 142 143, on right: 97 98
listaDeclaraciones_ (119)
    on left: 144 145, on right: 107
listaSentencias_ (120)
    on left: 146 147, on right: 107


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end                                shift, and go to state 2
    error                               shift, and go to state 3
    IDENTIFICADOR                       shift, and go to state 4
    OPERADOR_INCREMENTO                 shift, and go to state 5
    OPERADOR_UNARIO                     shift, and go to state 6
    OPERADOR_SIZEOF                     shift, and go to state 7
    CONSTANTE_CADENA                    shift, and go to state 8
    CONSTANTE_DECIMAL                   shift, and go to state 9
    CONSTANTE_OCTAL                     shift, and go to state 10
    CONSTANTE_HEXADECIMAL               shift, and go to state 11
    CONSTANTE_REAL                      shift, and go to state 12
    CONSTANTE_CARACTER                  shift, and go to state 13
    TIPO_DATO                           shift, and go to state 14
    ESPECIFICADOR_CLASE_ALMACENAMIENTO  shift, and go to state 15
    CALIFICADOR_TIPO                    shift, and go to state 16
    ENUM                                shift, and go to state 17
    IF                                  shift, and go to state 18
    SWITCH                              shift, and go to state 19
    WHILE                               shift, and go to state 20
    DO                                  shift, and go to state 21
    FOR                                 shift, and go to state 22
    CONTINUE                            shift, and go to state 23
    BREAK                               shift, and go to state 24
    RETURN                              shift, and go to state 25
    GOTO                                shift, and go to state 26
    '('                                 shift, and go to state 27
    '{'                                 shift, and go to state 28

    ';'  reduce using rule 105 (expresion_)

    line                        go to state 29
    expresion                   go to state 30
    expresionAsignacion         go to state 31
    expresionCondicional        go to state 32
    expresionOLogico            go to state 33
    expresionYLogico            go to state 34
    expresionOInclusivo         go to state 35
    expresionOExcluyente        go to state 36
    expresionY                  go to state 37
    expresionIgualdad           go to state 38
    expresionRelacional         go to state 39
    expresionCorrimiento        go to state 40
    expresionAditiva            go to state 41
    expresionMultiplicativa     go to state 42
    expresionConversion         go to state 43
    expresionUnaria             go to state 44
    expresionSufijo             go to state 45
    expresionPrimaria           go to state 46
    constante                   go to state 47
    declaracion                 go to state 48
    especificadoresDeclaracion  go to state 49
    especificadorTipo           go to state 50
    especificadorEnum           go to state 51
    nombreTypedef               go to state 52
    sentencia                   go to state 53
    sentenciaExpresion          go to state 54
    expresion_                  go to state 55
    sentenciaCompuesta          go to state 56
    sentenciaSeleccion          go to state 57
    sentenciaIteracion          go to state 58
    sentenciaSalto              go to state 59


state 2

    0 $accept: input $end .

    $default  accept


state 3

    5 line: error . '\n'

    '\n'  shift, and go to state 60


state 4

   46 expresionPrimaria: IDENTIFICADOR .
   92 nombreTypedef: IDENTIFICADOR .

    IDENTIFICADOR                       reduce using rule 92 (nombreTypedef)
    TIPO_DATO                           reduce using rule 92 (nombreTypedef)
    ESPECIFICADOR_CLASE_ALMACENAMIENTO  reduce using rule 92 (nombreTypedef)
    CALIFICADOR_TIPO                    reduce using rule 92 (nombreTypedef)
    ENUM                                reduce using rule 92 (nombreTypedef)
    '\n'                                reduce using rule 92 (nombreTypedef)
    '('                                 reduce using rule 46 (expresionPrimaria)
    '('                                 [reduce using rule 92 (nombreTypedef)]
    '*'                                 reduce using rule 92 (nombreTypedef)
    $default                            reduce using rule 46 (expresionPrimaria)


state 5

   35 expresionUnaria: OPERADOR_INCREMENTO . expresionUnaria

    IDENTIFICADOR          shift, and go to state 61
    OPERADOR_INCREMENTO    shift, and go to state 5
    OPERADOR_UNARIO        shift, and go to state 6
    OPERADOR_SIZEOF        shift, and go to state 7
    CONSTANTE_CADENA       shift, and go to state 8
    CONSTANTE_DECIMAL      shift, and go to state 9
    CONSTANTE_OCTAL        shift, and go to state 10
    CONSTANTE_HEXADECIMAL  shift, and go to state 11
    CONSTANTE_REAL         shift, and go to state 12
    CONSTANTE_CARACTER     shift, and go to state 13
    '('                    shift, and go to state 62

    expresionUnaria    go to state 63
    expresionSufijo    go to state 45
    expresionPrimaria  go to state 46
    constante          go to state 47


state 6

   36 expresionUnaria: OPERADOR_UNARIO . expresionConversion

    IDENTIFICADOR          shift, and go to state 61
    OPERADOR_INCREMENTO    shift, and go to state 5
    OPERADOR_UNARIO        shift, and go to state 6
    OPERADOR_SIZEOF        shift, and go to state 7
    CONSTANTE_CADENA       shift, and go to state 8
    CONSTANTE_DECIMAL      shift, and go to state 9
    CONSTANTE_OCTAL        shift, and go to state 10
    CONSTANTE_HEXADECIMAL  shift, and go to state 11
    CONSTANTE_REAL         shift, and go to state 12
    CONSTANTE_CARACTER     shift, and go to state 13
    '('                    shift, and go to state 27

    expresionConversion  go to state 64
    expresionUnaria      go to state 65
    expresionSufijo      go to state 45
    expresionPrimaria    go to state 46
    constante            go to state 47


state 7

   37 expresionUnaria: OPERADOR_SIZEOF . expresionUnaria
   38                | OPERADOR_SIZEOF . '(' nombreTipo ')'

    IDENTIFICADOR          shift, and go to state 61
    OPERADOR_INCREMENTO    shift, and go to state 5
    OPERADOR_UNARIO        shift, and go to state 6
    OPERADOR_SIZEOF        shift, and go to state 7
    CONSTANTE_CADENA       shift, and go to state 8
    CONSTANTE_DECIMAL      shift, and go to state 9
    CONSTANTE_OCTAL        shift, and go to state 10
    CONSTANTE_HEXADECIMAL  shift, and go to state 11
    CONSTANTE_REAL         shift, and go to state 12
    CONSTANTE_CARACTER     shift, and go to state 13
    '('                    shift, and go to state 66

    expresionUnaria    go to state 67
    expresionSufijo    go to state 45
    expresionPrimaria  go to state 46
    constante          go to state 47


state 8

   48 expresionPrimaria: CONSTANTE_CADENA .

    $default  reduce using rule 48 (expresionPrimaria)


state 9

   51 constante: CONSTANTE_DECIMAL .

    $default  reduce using rule 51 (constante)


state 10

   52 constante: CONSTANTE_OCTAL .

    $default  reduce using rule 52 (constante)


state 11

   53 constante: CONSTANTE_HEXADECIMAL .

    $default  reduce using rule 53 (constante)


state 12

   54 constante: CONSTANTE_REAL .

    $default  reduce using rule 54 (constante)


state 13

   55 constante: CONSTANTE_CARACTER .

    $default  reduce using rule 55 (constante)


state 14

   69 especificadorTipo: TIPO_DATO .

    $default  reduce using rule 69 (especificadorTipo)


state 15

   57 especificadoresDeclaracion: ESPECIFICADOR_CLASE_ALMACENAMIENTO . especificadoresDeclaracion_

    IDENTIFICADOR                       shift, and go to state 68
    TIPO_DATO                           shift, and go to state 14
    ESPECIFICADOR_CLASE_ALMACENAMIENTO  shift, and go to state 15
    CALIFICADOR_TIPO                    shift, and go to state 16
    ENUM                                shift, and go to state 17

    IDENTIFICADOR                       [reduce using rule 130 (especificadoresDeclaracion_)]
    TIPO_DATO                           [reduce using rule 130 (especificadoresDeclaracion_)]
    ESPECIFICADOR_CLASE_ALMACENAMIENTO  [reduce using rule 130 (especificadoresDeclaracion_)]
    CALIFICADOR_TIPO                    [reduce using rule 130 (especificadoresDeclaracion_)]
    ENUM                                [reduce using rule 130 (especificadoresDeclaracion_)]
    $default                            reduce using rule 130 (especificadoresDeclaracion_)
